# clauditor

./: .gitignore  DEV_NOTES.md  README.md  SPEC.md  cli.py  config.example.json  config.json  pricing.json  pyproject.toml  seed_demo.py
.claude/agents/: builder.md  integration-tester.md  reviewer.md
clauditor/: __init__.py
collectors/: __init__.py  admin_api.py  api_wrapper.py  claude_code.py
core/: __init__.py  analyzer.py  config.py  db.py  pricing.py
docs/: INSTALLATION.md  USER_GUIDE.md
server/: __init__.py  app.py  routes.py
tests/: test_admin_api.py  test_analyzer.py  test_api_wrapper.py  test_claude_code.py  test_cli.py  test_config.py  test_pricing.py  test_seed_demo.py  test_server.py  test_server_frontend.py  test_timeseries_granularity.py
web/: index.html  main.js  styles.css
